# tauv_control

./: README.md
abyss/: notlar.txt
abyss/project/: CMakeLists.txt  clean_build.sh  generate_stubs.py  instruction_for_devs.txt  requirements.txt  setup.py
abyss/project/abyss/: cli.py
abyss/project/include/: state.h  state_machine.h  transition.h
abyss/project/src/: main.cpp  state.cpp  state_machine.cpp  transition.cpp
abyss/project/tests/: demo.py  test1.py
